--- a/.gitignore
+++ b/.gitignore
@@ -15,5 +15,5 @@
 /log/*.log
 /tmp
 
-# Ignore application configuration
+# Ignore application configuration.  NodeJS study
 /config/application.yml
